Added the Pajek NET file format.
- Added a package stream.file.pajek.
- Added the FileSourcePAJEK.
- It is not yet possible to save files in pajek format.
- Changed the ui.graphicGraph/stylesheet/rgb.properties to account for
  some color names not in HTML but used by Pajek.
- Deprecated the old FileSourceGML.
- Added the .net extension in the FileSourceFactory.

--- a/src/org/graphstream/ui/graphicGraph/stylesheet/rgb.properties
+++ b/src/org/graphstream/ui/graphicGraph/stylesheet/rgb.properties
@@ -119,6 +119,8 @@ HotPink: 0xff69b4
 DeepPink: 0xff1493
 pink: 0xffc0cb
 LightPink: 0xffb6c1
+LightPurple: 0xccccff
+LightOrange: 0xffccb3
 PaleVioletRed: 0xdb7093
 maroon: 0xb03060
 MediumVioletRed: 0xc71585
@@ -655,3 +657,4 @@ DarkCyan: 0x008b8b
 DarkMagenta: 0x8b008b
 DarkRed: 0x8b0000
 LightGreen: 0x90ee90
+LightMagenta: 0xffccff
