Add new developer and contributor in pom. Update some informations.

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,14 @@
 		 Members are sorted in alphabetically. -->
 	<developers>
 		<developer>
+			<id>sbalev</id>
+			<name>Stefan Balev</name>
+			<email>stefan.balev@graphstream-project.org</email>
+			<organization>LITIS</organization>
+			<organizationUrl>http://www.litislab.eu</organizationUrl>
+		</developer>
+		
+		<developer>
 			<id>jbaudry</id>
 			<name>Julien Baudry</name>
 			<email>julien.baudry@graphstream-project.org</email>
@@ -90,6 +98,13 @@
 			<email>frederic.guinand@univ-lehavre.fr</email>
 			<organization>LITIS</organization>
 			<organizationUrl>http://www.litislab.eu</organizationUrl>
+		</contributor>
+		
+		<contributor>
+			<name>Richard O. Legendi</name>
+			<email>richard.legendi@univ-lehavre.fr</email>
+			<organization>Eötvös Loránd University, Faculty of Informatics</organization>
+			<organizationUrl>http://people.inf.elte.hu/legendi/</organizationUrl>
 		</contributor>
 	</contributors>
 
