Update POM by adding resources for tests

--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,15 @@
 			</resource>
 		</resources>
 
+		<testResources>
+			<testResource>
+		    	<directory>src-test</directory>
+		    	<includes>
+		      		<include>org/graphstream/stream/file/test/data/**</include>
+		    	</includes>
+		  	</testResource>
+		</testResources>
+
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
