Update POM and fix some bugs in FileSinkImages

--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<parent>
+		<groupId>org.sonatype.oss</groupId>
+		<artifactId>oss-parent</artifactId>
+		<version>7</version>
+	</parent>
+	
 	<groupId>org.graphstream</groupId>
 	<artifactId>gs-core</artifactId>
-	<version>1.2-git</version>
+	<version>1.2-SNAPSHOT</version>
 
 	<name>gs-core</name>
 	<description>
@@ -40,6 +46,7 @@
 	<!-- Source code of GraphStream is hosted on GitHub. -->
 	<scm>
 		<connection>scm:git:git://github.com/graphstream/gs-core.git</connection>
+		<developerConnection>scm:git:git://github.com/graphstream/gs-core.git</developerConnection>
 		<url>https://github.com/graphstream/gs-core</url>
 	</scm>
 
