--- a/pom.xml
+++ b/pom.xml
@@ -295,6 +295,7 @@
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 			<optional>false</optional>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.graphstream</groupId>
