--- a/pom.xml
+++ b/pom.xml
@@ -1,25 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-	<!--
-		This file is part of GraphStream <http://graphstream-project.org>.
-		GraphStream is a library whose purpose is to handle static or dynamic
-		graph, create them from scratch, file or any source and display them.
-		This program is free software distributed under the terms of two
-		licenses, the CeCILL-C license that fits European law, and the GNU
-		Lesser General Public License. You can use, modify and/ or
-		redistribute the software under the terms of the CeCILL-C license as
-		circulated by CEA, CNRS and INRIA at the following URL
-		<http://www.cecill.info> or under the terms of the GNU LGPL as
-		published by the Free Software Foundation, either version 3 of the
-		License, or (at your option) any later version. This program is
-		distributed in the hope that it will be useful, but WITHOUT ANY
-		WARRANTY; without even the implied warranty of MERCHANTABILITY or
-		FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public
-		License for more details. You should have received a copy of the GNU
-		Lesser General Public License along with this program. If not, see
-		<http://www.gnu.org/licenses/>. The fact that you are presently
-		reading this means that you have had knowledge of the CeCILL-C and
-		LGPL licenses and that you accept their terms.
-	-->
+<!-- This file is part of GraphStream <http://graphstream-project.org>. GraphStream 
+	is a library whose purpose is to handle static or dynamic graph, create them 
+	from scratch, file or any source and display them. This program is free software 
+	distributed under the terms of two licenses, the CeCILL-C license that fits 
+	European law, and the GNU Lesser General Public License. You can use, modify 
+	and/ or redistribute the software under the terms of the CeCILL-C license 
+	as circulated by CEA, CNRS and INRIA at the following URL <http://www.cecill.info> 
+	or under the terms of the GNU LGPL as published by the Free Software Foundation, 
+	either version 3 of the License, or (at your option) any later version. This 
+	program is distributed in the hope that it will be useful, but WITHOUT ANY 
+	WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS 
+	FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more 
+	details. You should have received a copy of the GNU Lesser General Public 
+	License along with this program. If not, see <http://www.gnu.org/licenses/>. 
+	The fact that you are presently reading this means that you have had knowledge 
+	of the CeCILL-C and LGPL licenses and that you accept their terms. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
@@ -29,7 +24,7 @@
 		<artifactId>oss-parent</artifactId>
 		<version>7</version>
 	</parent>
-	
+
 	<groupId>org.graphstream</groupId>
 	<artifactId>gs-core</artifactId>
 	<version>2.0.0-SNAPSHOT</version>
@@ -60,8 +55,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
-	<!-- The GraphStream Team.
-		 Members are sorted in alphabetically. -->
+	<!-- The GraphStream Team. Members are sorted in alphabetically. -->
 	<developers>
 		<developer>
 			<id>sbalev</id>
@@ -135,12 +129,9 @@
 
 	<profiles>
 		<profile>
-			<!--
-				This profile includes classes of mbox2 and pherd project to create a
-				fully usable jar. You need to have a valid gs-deps folder at the
-				same hierarchic level that the one of your project with mbox2 and
-				pherd compiled (mvn compile).
-			-->
+			<!-- This profile includes classes of mbox2 and pherd project to create 
+				a fully usable jar. You need to have a valid gs-deps folder at the same hierarchic 
+				level that the one of your project with mbox2 and pherd compiled (mvn compile). -->
 			<id>nodeps</id>
 			<build>
 				<resources>
@@ -160,10 +151,8 @@
 			</build>
 		</profile>
 		<profile>
-			<!--
-				This profile has to be enabled when releasing the package. It will
-				enable the sign phase.
-			-->
+			<!-- This profile has to be enabled when releasing the package. It will 
+				enable the sign phase. -->
 			<id>release</id>
 			<build>
 				<plugins>
@@ -305,6 +294,24 @@
 			<artifactId>mbox2</artifactId>
 			<version>1.0</version>
 			<optional>false</optional>
+		</dependency>
+		<dependency>
+			<groupId>com.sparkjava</groupId>
+			<artifactId>spark-core</artifactId>
+			<version>2.5.5</version>
+			<optional>false</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.5</version>
+			<optional>false</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.3</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
