--- a/pom.xml
+++ b/pom.xml
@@ -210,7 +210,7 @@
 					<source>1.8</source>
 					<target>1.8</target>
 				</configuration>
-				<version>3.3</version>
+				<version>3.6.2</version>
 			</plugin>
 
 			<plugin>
@@ -227,7 +227,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.6</version>
+				<version>3.0.0</version>
 			</plugin>
 
 			<plugin>
@@ -253,13 +253,13 @@
 					<nonavbar>false</nonavbar>
 					<notree>false</notree>
 					<show>public</show>
-					<source>1.5</source>
+					<source>1.8</source>
 					<splitindex>true</splitindex>
 					<use>true</use>
 					<version>true</version>
 					<windowtitle>The GraphStream ${project.version} API</windowtitle>
 				</configuration>
-				<version>2.10.2</version>
+				<version>3.0.0-M1</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -270,7 +270,7 @@
 						<exclude>**/*$*</exclude>
 					</excludes>
 				</configuration>
-				<version>2.18.1</version>
+				<version>2.20</version>
 			</plugin>
 		</plugins>
 	</build>
