--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,6 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>org.sonatype.oss</groupId>
-		<artifactId>oss-parent</artifactId>
-		<version>7</version>
-	</parent>
-
 	<groupId>org.graphstream</groupId>
 	<artifactId>gs-core</artifactId>
 	<version>2.0.0-SNAPSHOT</version>
@@ -34,7 +28,7 @@
 		The GraphStream library. With GraphStream you deal with
 		graphs. Static and Dynamic. You create them from scratch, from a file
 		or any source. You display and render them. This is the core package
-		that contains the minimal needed to read, display and write a graph.
+		that contains the minimal needed to read and write a graph.
 	</description>
 	<url>http://graphstream-project.org</url>
 
