build: Move resource to resources directory.

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ sourceSets {
         java {
             srcDirs = ["src"]
         }
+        resources {
+            srcDirs = ["resources"]
+        }
     }
     test {
         java {
