--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
 	<groupId>org.graphstream</groupId>
 	<artifactId>gs-core</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
+	<version>2.0.0-beta</version>
 
 	<name>gs-core</name>
 	<description>
