--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
 	License along with this program. If not, see <http://www.gnu.org/licenses/>. 
 	The fact that you are presently reading this means that you have had knowledge 
 	of the CeCILL-C and LGPL licenses and that you accept their terms. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.graphstream</groupId>
@@ -117,6 +117,19 @@
 		</testResources>
 
 		<plugins>
+			<plugin>				<!-- Create sources.jar -->
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>3.2.1</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
@@ -183,8 +196,8 @@
 						<exclude>**/*$*</exclude>
 					</excludes>
 				</configuration>
-          		<version>3.0.0-M3</version>
-		  	</plugin>
+				<version>3.0.0-M3</version>
+			</plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
@@ -220,21 +233,21 @@
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
 					<archive>
-					<manifest>
-						<mainClass>org.graphstream.util.GraphDiff</mainClass>
-					</manifest>
+						<manifest>
+							<mainClass>org.graphstream.util.GraphDiff</mainClass>
+						</manifest>
 					</archive>
 					<descriptorRefs>
-					<descriptorRef>jar-with-dependencies</descriptorRef>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
 					</descriptorRefs>
 				</configuration>
 				<executions>
 					<execution>
-					<id>make-assembly</id> <!-- this is used for inheritance merges -->
-					<phase>prepare-package</phase> <!-- bind to the prepare-packaging phase so that it can be signed -->
-					<goals>
-						<goal>single</goal>
-					</goals>
+						<id>make-assembly</id>						<!-- this is used for inheritance merges -->
+						<phase>prepare-package</phase>						<!-- bind to the prepare-packaging phase so that it can be signed -->
+						<goals>
+							<goal>single</goal>
+						</goals>
 					</execution>
 				</executions>
 			</plugin>
